--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,10 +2,11 @@
 body {
     font-family: 'Raleway', sans-serif;
     background-color: black;
+    color: #FFFFFF;
 }
 
 main {
-    width: 1280px;
+    /* width: 1280px; */
     height: auto;
 }
 
@@ -17,7 +18,6 @@ header {
 }
 
 header h1{
-    color: white;
     font-size: 50px;
     font-weight: 500;
     margin-top: 11.5px;
@@ -44,8 +44,7 @@ header h1{
 #descripcion_iguanas_texto {
     width: 48%;
     float: left;
-    padding: 31px 0;
-    color: white;   
+    padding: 31px 0;   
 }
 
 #descripcion_iguanas_imagen {
@@ -53,35 +52,54 @@ header h1{
     padding: 0 0 0 106px;
 }  
 
-.caracteristicas h2 {
-    padding: 0px;
-    margin: 0px;
+.features{
+    background-color: #1E1A13;
     text-align: center;
-    color: white; 
-
+    margin: 66px 0 73px auto;
+    height: 348px;
 }
-/* #caracteristicas {
+
+.feature {      
     width: 30%;
     padding: 1%;
     display: inline-block;
+}
 
-} */
+.features h2 {
+    padding: 68px;
+    margin: 0px;
+    font-size: 40px;
+    text-align: center;
+}
+
+.feature i {    
+    display: block;
+    padding: 0.5em;
+}
 
 
+#galeria {
+    height: 348px;
+    padding-left: 150px;
 
+}
+
+.foto {
+    display: inline-block;
+}
+
+.foto img { 
+    padding-left: 16px;
+}
 
 footer {    
     background-color: #1E1A13;
     opacity: 0.94;
     height: 102px;
-    
-
 }
 
 footer p{   
     padding-top: 39px;
-    color:white;
     text-align: center;
     font-size: 1.25em;
-
 }
