se modifica color de footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,7 +97,7 @@ header h1 {
 
 /* Fin de la página */
 footer {
-  background-color: #1e1a13;
+  background-color: red;
   opacity: 0.94;
   height: 102px;
 }
